test/testdata/variables/undeclared_assignment_error_local.lox
{
  a = 1; // error: a has not been declared
}
